Really add main fragment

--- a/random-numbers/app/src/main/res/values/strings.xml
+++ b/random-numbers/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Random Numbers</string>
+    <string name="menu_title">Configuración</string>
 </resources>
