--- a/random-numbers/app/src/main/res/values/strings.xml
+++ b/random-numbers/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Random Numbers</string>
     <string name="menu_title">Configuración</string>
+    <string name="menu_number_type">Tipo de número</string>
 </resources>
