--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
 
     <string name="label_integer">Integer</string>
     <string name="label_float">Float</string>
+    <string name="label_binary">Binary</string>
 
     <string-array name="menu_labels">
         <item>Number configuration</item>
