--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">RanGen</string>
-    <string name="menu_title">Configuration</string>
+    <string name="menu_title">Menu</string>
 
     <string name="label_number_type_title">Number Type</string>
     <string name="label_integer">Integer</string>
@@ -8,6 +8,7 @@
     <string name="label_binary">Binary</string>
 
     <string-array name="menu_labels">
+        <item>Home</item>
         <item>Number configuration</item>
     </string-array>
 </resources>
