--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,10 @@
     <string name="label_float">Float</string>
     <string name="label_binary">Binary</string>
 
+    <string name="label_boundaries_title">Boundaries</string>
+    <string name="label_lower_bound">Lower bound</string>
+    <string name="label_upper_bound">Upper bound</string>
+
     <string-array name="menu_labels">
         <item>Home</item>
         <item>Number configuration</item>
