--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
 
     <string name="label_number_type_title">Number Type</string>
     <string name="label_integer">Integer</string>
-    <string name="label_float">Float</string>
+    <string name="label_decimal">Decimal</string>
     <string name="label_binary">Binary</string>
 
     <string name="label_boundaries_title">Boundaries</string>
